--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -6,7 +6,11 @@
         </div>
     </div>
     <div class="notes-list">
-        <app-note-card *ngFor="let note of createNoteService.notes" [title]="note.title" [body]="note.body"></app-note-card>
+        <app-note-card 
+        *ngFor="let note of createNoteService.notes; index as i"
+        [note]="note"
+        (requestDelete)="createNoteService.deleteTask(i)">
+    </app-note-card>
     </div>
     <button class="button add-button" routerLink="/create-note">+ Add</button>
 </div>
