--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,11 +1,14 @@
 <div class="layout-box">
 
-    <div class="top-bar">
-        <h1>TASKS</h1>
+    <div class="sidebar">
+        <ul>
+            <li><a href="#"><i class="task_icon"></i>Tasks</a></li>
+            <li><a href="#"><i class="completed_icon"></i>Completed</a></li>
+            <li><a href="#"><i class="deleted"></i>Deleted</a></li>
+        </ul>
     </div>
 
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
-
 </div>
