--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -1,13 +1,7 @@
 .note-card-container {
     position: relative;
-    background: #fff;
+    background: #2E2E2E;
     border-radius: 0.5rem;
-    box-shadow: 0px 2px 10px 1px;
-    transition: box-shadow 0.2s ease-out;
-}
-
-.note-card-container:hover {
-    box-shadow: 0px 1px 3px 4px;
 }
 
 .note-card-content {
@@ -18,7 +12,7 @@
     position: relative;
     max-height: 80px;
     overflow: hidden;
-    color: #555;
+    color: #E5E5E5;
 }
 
 .fade-out-text {
@@ -26,14 +20,14 @@
     bottom: 0;
     height: 50%;
     width: 100%;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(255, 255, 255));
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(46, 46, 46));
     pointer-events: none;
 }
 
 .note-card-title {
     font-size: 22px;
     font-weight: bold;
-    color: #0084ff;
+    color: #E5E5E5;
 }
 
 .notes-list {
@@ -44,11 +38,11 @@
 .x-button {
     position: absolute;
     top: 12px;
-    right: 12px;
-    height: 34px;
+    top: 104px;
+    right: 35px;
     width: 34px;
-    background-color: #fff;
-    background-image: url('../../assets/close_black_24dp.svg');
+    background-color: #2E2E2E;
+    background-image: url('../../assets/noun_Delete_1560851.svg');
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
@@ -71,12 +65,12 @@
 
 .edit-button {
     position: absolute;
-    top: 40px;
-    right: 12px;
-    height: 40px;
+    top: 98px;
+    right: 0px;
+    height: 50px;
     width: 34px;
-    background-color: #fff;
-    background-image: url('../../assets/noun_edit_684936.svg');
+    background-color: #2E2E2E;
+    background-image: url('../../assets/edit.svg');
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
