--- a/src/app/pages/notes-list/notes-list.component.css
+++ b/src/app/pages/notes-list/notes-list.component.css
@@ -1,13 +1,3 @@
-.container .filter {
-    margin: 1rem;
-    position: relative;
-    width: 300px;
-    height: 41px;
-    border: 0.2rem solid #0084ff;
-    padding: 0px 10px;
-    border-radius: 1rem;
-}
-
 .main-container {
     display: flex;
     flex-direction: column;
@@ -20,6 +10,7 @@
     padding-top: 1px;
     background: #0084ff;
     border: none;
+    color: #1F1F1F;
 }
 
 .button:hover {
@@ -40,10 +31,14 @@ app-note-card {
 .add-button{
     position: fixed;
     bottom: 0;
-    width: 500px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 15px 5px;
+    right: 20px;
+    width: 1px;
+    border-radius: 50px;
     height: 50px;
-    font-size: 15px;
-
+    font-size: 10px;
+    padding-left: 18px;
+    padding-right: 35px;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
 }
