--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -1,16 +1,10 @@
 <div class="main-container">
-    <div class="search-bar-container">
-        <div class="container">
-            <input type="text" placeholder="Find.." class="filter">
-            <button class="button">Filter</button>
-        </div>
-    </div>
     <div class="notes-list">
         <app-note-card 
-        *ngFor="let note of createNoteService.notes; index as i"
+        *ngFor="let note of NoteService.notes; index as i"
         [note]="note"
-        (requestDelete)="createNoteService.deleteTask(i)">
+        (requestDelete)="NoteService.deleteTask(i)">
     </app-note-card>
     </div>
-    <button class="button add-button" routerLink="/create-note">+ Add</button>
+    <button class="button add-button" routerLink="/create-note">+</button>
 </div>
