--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -34,59 +34,89 @@
     margin-top: 3rem;
 }
 
-
-.x-button {
+.trash {
     position: absolute;
-    top: 12px;
     top: 104px;
     right: 35px;
     width: 34px;
-    background-color: #2E2E2E;
-    background-image: url('../../assets/noun_Delete_1560851.svg');
+    font-size: 30px;
+    background:none;
+    color: #fb5a5a;
+
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
-    opacity: 0.5;
     transition: opacity 0.2s ease-out;
     transform: scale(0.5);
     border: none;
 }
 
-.x-button:hover {
-    opacity: 1;
+.trash:hover {
     transform: scale(1);
     transition: transform 0.2s ease-out;
     cursor: pointer;
 }
 
-.x-button:active{
-    background-color: #fb5a5a;
+.trash:active{
+    color: #fff;
 }
 
-.edit-button {
+.edit {
     position: absolute;
     top: 98px;
     right: 0px;
     height: 50px;
     width: 34px;
-    background-color: #2E2E2E;
-    background-image: url('../../assets/edit.svg');
+    font-size: 30px;
+    background:none;
+
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
-    opacity: 0.5;
     transition: opacity 0.2s ease-out;
     transform: scale(0.5);
     border: none;
+    color: #00ff40b0;
 }
 
-.edit-button:hover {
-    opacity: 1;
+.edit:hover {
     transform: scale(1);
     transition: transform 0.2s ease-out;
     cursor: pointer;
 }
 
-.edit-button:active{
-    background-color: #00ff40b0;
+.edit:active{
+    color: #fff;
+}
+
+.greet {
+    color: #fff;
+    position: absolute;
+    width: 190px;
+    height: 44px;
+    left: 369px;
+    top: 35px;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 44px;
+}
+
+.header-name {
+    color: #33FF9D;
+    position: absolute;
+    width: 190px;
+    height: 44px;
+    left: 400px;
+    top: 35px;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 44px;
+}
+
+h6 {
+    position: absolute;
+    width: 190px;
+    height: 44px;
+    left: 369px;
+    top: 72px;
 }
