--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -1,3 +1,5 @@
+<h1 class="greet">Hi</h1><h2 class="header-name">Sounak</h2>
+<h6>Here is your tasks..</h6>
 <div #container class="note-card-container">
     <div class="note-card-content">
         <h1 class="note-card-title">{{ note.title }}</h1>
@@ -6,6 +8,7 @@
             <div class="fade-out-text"></div>
         </div>
     </div>
-    <button class="x-button" type="button" (click)="requestDelete.emit(note)"></button>
-    <button class="edit-button"></button>
+    <p>{{ note.createdAt }}</p>
+    <button class="trash" type="button" (click)="requestDelete.emit(note)"><fa-icon [icon]="faTrash"></fa-icon></button>
+    <button class="edit"><fa-icon [icon]="faEdit"></fa-icon></button>
 </div>
