--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -1,13 +1,5 @@
 <div class="layout-box">
-
-    <div class="sidebar">
-        <ul>
-            <li><a href="#"><i class="task_icon"></i>Tasks</a></li>
-            <li><a href="#"><i class="completed_icon"></i>Completed</a></li>
-            <li><a href="#"><i class="deleted"></i>Deleted</a></li>
-        </ul>
-    </div>
-
+    <app-side-bar></app-side-bar>
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
