minor changes in UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,16 @@
 body{
     background: #1F1F1F;
 }
+
+body::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: #1F1F1F;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #0099ff;
+}
+
