--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -2,13 +2,13 @@
 <h6>Here is your tasks..</h6>
 <div #container class="note-card-container">
     <div class="note-card-content">
+        <p class="date">{{ note.createdAt }}</p>
         <h1 class="note-card-title">{{ note.title }}</h1>
         <div class="note-card-body">
             <p>{{ note.body }}</p>
             <div class="fade-out-text"></div>
         </div>
     </div>
-    <p>{{ note.createdAt }}</p>
     <button class="trash" type="button" (click)="requestDelete.emit(note)"><fa-icon [icon]="faTrash"></fa-icon></button>
     <button class="edit"><fa-icon [icon]="faEdit"></fa-icon></button>
 </div>
