--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -3,6 +3,7 @@
 <div #container class="note-card-container">
     <div class="note-card-content">
         <p class="date">{{ note.createdAt }}</p>
+        <button class="done" type="button"><fa-icon [icon]="faCheckCircle"></fa-icon></button>
         <h1 class="note-card-title">{{ note.title }}</h1>
         <div class="note-card-body">
             <p>{{ note.body }}</p>
