--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -38,23 +38,13 @@
     position: absolute;
     top: 104px;
     right: 35px;
-    width: 34px;
-    font-size: 30px;
-    background:none;
+    font-size: 18px;
+    background: none;
     color: #fb5a5a;
-
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
-    transition: opacity 0.2s ease-out;
-    transform: scale(0.5);
     border: none;
-}
-
-.trash:hover {
-    transform: scale(1);
-    transition: transform 0.2s ease-out;
-    cursor: pointer;
 }
 
 .trash:active{
@@ -63,26 +53,16 @@
 
 .edit {
     position: absolute;
-    top: 98px;
-    right: 0px;
+    top: 97px;
+    right: -11px;
     height: 50px;
-    width: 34px;
-    font-size: 30px;
-    background:none;
-
+    font-size: 20px;
+    background: none;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 1rem;
-    transition: opacity 0.2s ease-out;
-    transform: scale(0.5);
     border: none;
     color: #00ff40b0;
-}
-
-.edit:hover {
-    transform: scale(1);
-    transition: transform 0.2s ease-out;
-    cursor: pointer;
 }
 
 .edit:active{
@@ -125,17 +105,25 @@ h6 {
     font-size: 10px;
 }
 
-.done {
+.note-checkbox {
     position: absolute;
-    width: 34px;
-    font-size: 25px;
+    width: 2.5rem;
+    font-size: 16px;
     background: none;
-    color: #33FF9D;
-    border: none;
+    color: transparent;
+    border: 2px solid #33FF9D;
     top: 15px;
     right: 10px;
+    height: 2.5rem;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    align-items: center;
+    cursor: pointer;
 }
 
-.done:active {
-    color: #fff;
+.done {
+    background: #33FF9D;
+    color: #2E2E2E;
+    border-color: transparent;
 }
