--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -3,7 +3,8 @@
 <div #container class="note-card-container">
     <div class="note-card-content">
         <p class="date">{{ note.createdAt }}</p>
-        <button class="done" type="button"><fa-icon [icon]="faCheckCircle"></fa-icon></button>
+        <span class="note-checkbox" *ngIf="!note.isCompleted()" (click)="completed()"><fa-icon [icon]="faCheck"></fa-icon></span>
+        <span class="note-checkbox done"  *ngIf="note.isCompleted()" (click)="completed()"><fa-icon [icon]="faCheck"></fa-icon></span>
         <h1 class="note-card-title">{{ note.title }}</h1>
         <div class="note-card-body">
             <p>{{ note.body }}</p>
