--- a/src/app/note-card/note-card.component.html
+++ b/src/app/note-card/note-card.component.html
@@ -3,14 +3,20 @@
 <div #container class="note-card-container">
     <div class="note-card-content">
         <p class="date">{{ note.createdAt }}</p>
-        <span class="note-checkbox" *ngIf="!note.isCompleted()" (click)="completed()"><fa-icon [icon]="faCheck"></fa-icon></span>
-        <span class="note-checkbox done"  *ngIf="note.isCompleted()" (click)="completed()"><fa-icon [icon]="faCheck"></fa-icon></span>
+        <span class="note-checkbox" *ngIf="!note.isCompleted()" (click)="completed()">
+            <fa-icon [icon]="faCheck"></fa-icon>
+        </span>
+        <span class="note-checkbox done" *ngIf="note.isCompleted()" (click)="completed()">
+            <fa-icon [icon]="faCheck"></fa-icon>
+        </span>
         <h1 class="note-card-title">{{ note.title }}</h1>
         <div class="note-card-body">
             <p>{{ note.body }}</p>
             <div class="fade-out-text"></div>
         </div>
+        <div class="buttons">
+            <span class="edit"><fa-icon [icon]="faEdit"></fa-icon></span>
+            <span class="trash" type="button" (click)="requestDelete.emit(note)"><fa-icon [icon]="faTrash"></fa-icon></span>
+        </div>
     </div>
-    <button class="trash" type="button" (click)="requestDelete.emit(note)"><fa-icon [icon]="faTrash"></fa-icon></button>
-    <button class="edit"><fa-icon [icon]="faEdit"></fa-icon></button>
 </div>
