--- a/src/app/pages/notes-list/notes-list.component.html
+++ b/src/app/pages/notes-list/notes-list.component.html
@@ -4,7 +4,7 @@
 
   <div class="notes-list">
     <app-note-card *ngFor="let note of notes; index as i" [note]="note"
-      (requestDelete)="noteService.deleteTask(i)">
+      (requestDelete)="storageService.removeNote(i)">
     </app-note-card>
 
   </div>
