--- a/src/app/note-card/note-card.component.css
+++ b/src/app/note-card/note-card.component.css
@@ -51,7 +51,7 @@
 
 .trash {
     font-size: 20px;
-    color: #fb5a5a;
+    color: #E55D5D;
     cursor: pointer;
 }
 
@@ -61,7 +61,7 @@
 
 .edit {
     font-size: 20px;
-    color: #00ff40b0;
+    color: #45FF27;
     cursor: pointer;
     margin-right: 3rem;
 }
